Topic_6: Several corrections
- Added productQuantity method  in ShoppingCart class
- Applied methods GET, SET, DELETE, POST and PUT
- Typo corrections
