# topic_6/swagger files/swagger-registration.yml
@@ -7,123 +7,92 @@ servers:
   - url: 'http://localhost:8080'
 paths:
   /registration/createUser:
-    put:
+    post:
       description: Create user to registration. Information necessary (:) unique nickname, firstname, lastname, email and password
-      parameters:
-        - name: name
-          in: query
-          schema:
-            type: string
-          example: lucio
-        - name: user
-          in: query
-          schema:
-            type: string
-          example: lucio.martin
-        - name: email
-          in: query
-          schema:
-            type: string
-          example: lucio.martin@gmail.com
-        - name: lastname
-          in: query
-          schema:
-            type: string
-          example: martin
-        - name: pass
-          in: query
-          schema:
-            type: string
-          example: lucio1234
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                firstname:
+                  type: string
+                password:
+                  type: string
+                mail:
+                  type: string
+                user:
+                  type: string
+                lastname:
+                  type: string
+            examples:
+              '0':
+                value: {
+                        "firstname" : "user_firstname",
+                        "lastname" : "user_lastname",
+                        "user" : "user_user",
+                        "mail" : "user@mail.com",
+                        "password" : "pass"
+                }
       responses:
-        '200':
-          description: Ok
-          content:
-            application/json;charset=UTF-8:
-              schema:
-                type: string
-              examples: {}
+        '201':
+          description: Created
         '400':
-          description: parameter is not present(:) string 'name', string 'user', string 'lastname', string 'email' and/or string 'pass'
-          content:
-            application/json;charset=UTF-8:
-              schema:
-                type: string
-              examples: {}
-  /registration/deleteUser:
-    delete:
-      description: Remove user from the repository
-      parameters:
-        - name: user
-          in: query
-          schema:
-            type: string
-          example: mateo
-      responses:
-        '200':
-          description: Ok
-          content:
-            application/json;charset=UTF-8:
-              schema:
-                type: string
-              examples: {}
-        '400':
-          description: parameter is not present(:) string 'user'
-          content:
-            application/json;charset=UTF-8:
-              schema:
-                type: string
-              examples: {}
-  /registration/findRealName:
+          description: Data not availabe to create user
+  /registration/findRealName/firstname/lastname:
     get:
       description: Find user through its real identity (:) firstname and lastname
-      parameters:
-        - name: firstname
-          in: query
-          schema:
-            type: string
-          example: demis
-        - name: lastname
-          in: query
-          schema:
-            type: string
-          example: martin
-      responses:
-        '200':
-          description: Auto generated using Swagger Inspector
-          content:
-            application/json;charset=UTF-8:
-              schema:
-                type: string
-              examples: {}
-        '400':
-          description: parameter is not present(:) string 'firstname' and/or string 'lastname'
-          content:
-            application/json;charset=UTF-8:
-              schema:
-                type: string
-              examples: {}
-  /registration/findUser:
-    get:
-      description: Find user through its code
-      parameters:
-        - name: user
-          in: query
-          schema:
-            type: string
-          example: lucioUser02
       responses:
         '200':
           description: Ok
-          content:
-            application/json;charset=UTF-8:
-              schema:
-                type: string
-              examples: {}
+        '404':
+          description: Data not availabe to create user
+  /registration/deleteUser/user:
+    delete:
+      description: Delete user
+      responses:
+        '200':
+          description: Ok
         '400':
-          description: parameter is not present(:) string 'user'
-          content:
-            application/json;charset=UTF-8:
-              schema:
-                type: string
-              examples: {}
+          description: Parameter is not present
+  /registration/updateUser:
+    put:
+      description: Update user's information
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                firstname:
+                  type: string
+                password:
+                  type: string
+                mail:
+                  type: string
+                user:
+                  type: string
+                lastname:
+                  type: string
+            examples:
+              '0':
+                value: {
+                        "firstname" : "user_firstname",
+                        "lastname" : "user_lastname",
+                        "user" : "user_user",
+                        "mail" : "user@mail.com",
+                        "password" : "pass"
+                }
+      responses:
+        '200':
+          description: Ok
+        '400':
+          description: Data not availabe to update user
+  /registration/findUser/user:
+    get:
+      description: Find user through its unique user
+      responses:
+        '200':
+          description: Ok
+        '400':
+          description: Parameter is not present
